@@ -76,9 +76,17 @@ test_that("`plotClusters` rerun above tests with sampleData included", {
   par(mfrow=c(1,2))
   x2<-plotClusters(ceSim,sampleData="all",resetColors=TRUE)
   x1<-plotClusters(ceSim,resetColors=TRUE)
+  
+  #test the new TRUE option
+  plotClusters(naSim,sampleData=TRUE) 
+  
+  #check NAs
+  naSim<-ceSim
+  colData(naSim)[sample(10,1:nrow(naSim)),]<-NA
+  plotClusters(naSim,sampleData=c("A","B"))
+
   #this is not working because first one puts -1/-2 last and second puts them first, and so then assigns different colors to the groups
 #  expect_equal(x1,x2)
-
 #   par(mfrow=c(1,2))
 #   x2<-plotClusters(ceSim,sampleData="all",resetColors=FALSE)
 #   x1<-plotClusters(ceSim,resetColors=FALSE)
