@@ -2,6 +2,10 @@ Changes in version 1.1.1-9001 (Release date:  )
 ==============
 
 Changes:
+* plotClusters can now handle NA values in the colData
+* plotClusters now allows for sampleData=TRUE for plotting all of the sampleData in the colData slot.
+
+Bug fixes:
 * fixed bug in mergeClusters unable to plot when too big of edge lengths (same as plotDendrogram)
 
 
